Introducing Manifest flags to support java 17.
Based on recommendation of Michal Kurka and his change introduced in
H2O-3: https://github.com/h2oai/h2o-3/blob/master/h2o-assemblies/main/build.gradle#L87